[package]
name = "mcp"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mcp_rust_sdk = "0.1.1"
tokio-tungstenite = "0.20.1"  

[dev-dependencies]
tokio-tungstenite = "*"
futures-util = "0.3.28"
